Quick alignment fix of image.

--- a/src/components/ui-Image/index.scss
+++ b/src/components/ui-Image/index.scss
@@ -7,5 +7,6 @@
   .img {
     width: 100%;
     height: auto;
+    vertical-align: top;
   }
 }
